.build_out.txt
x86_64-w64-mingw32-g++ -Wl,--subsystem,10 -e efi_main -Wall -Wextra -Wpedantic -g -O0 -mno-red-zone -ffreestanding -nostdlib -fno-exceptions -fno-rtti -Wno-missing-field-initializers -I. -I./Bootloader -I./utils -o bin/BOOTX64.EFI Bootloader/bootloader.cpp utils/printf.cpp utils/CommonUtils.cpp Bootloader/Console.cpp Bootloader/FileSystem.cpp Bootloader/MemoryManager.cpp \
	-L /usr/lib -l:libefi.a -l:libgnuefi.a
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/kernel.cpp -o build/kernel.o
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/Testing/KernelSelfTests.cpp -o build/kernel_self_tests.o
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/Layers/Dispatcher.cpp -o build/dispatcher.o
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/Layers/Resource/ResourceLayer.cpp -o build/resource_layer.o
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/Layers/Resource/FrameBuffer.cpp -o build/frame_buffer.o
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/Layers/Resource/TTY.cpp -o build/tty.o
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/Layers/Resource/Keyboard.cpp -o build/keyboard.o
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/Layers/Resource/KernelHeapManager.cpp -o build/kernel_heap_manager.o
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/Layers/Resource/RamFileSystemManager.cpp -o build/ram_file_system_manager.o
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/Layers/Resource/VirtualAddressSpace.cpp -o build/virtual_address_space.o
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/Layers/Logic/ELFManager.cpp -o build/elf_manager.o
g++ -ffreestanding -fno-pic -fno-pie -mcmodel=kernel -mno-red-zone -nostdlib -fno-exceptions -fno-rtti -fno-stack-protector -fno-omit-frame-pointer -g -O0 -Wall -Wextra -I./Kernel -I./Bootloader -I./utils -c Kernel/Layers/Logic/LogicLayer.cpp -o build/logic_layer.o
Kernel/Layers/Logic/LogicLayer.cpp: In member function ‘uint8_t LogicLayer::ChangeProcessExecution(uint8_t, const char*, const char* const*, uint64_t, const char* const*, uint64_t)’:
Kernel/Layers/Logic/LogicLayer.cpp:1004:14: error: ‘SkipAddressSpaceCleanup’ was not declared in this scope; did you mean ‘SkipOldAddressSpaceCleanup’?
 1004 |         if (!SkipAddressSpaceCleanup)
      |              ^~~~~~~~~~~~~~~~~~~~~~~
      |              SkipOldAddressSpaceCleanup
make: *** [Makefile:130: kernel.bin] Error 1
